# stock-trading-platform

./: .config.yaml.example  .gitignore  AGENTS.md  PROJECT_KNOWLEDGE.md  README.md  README_CN.md  a2as.yaml  demo_financial_indicators.py  example.config.yaml  package-lock.json  requirements.txt  temp_main_financial_skill.py
adk-agent/: README.md  main.py  pyproject.toml  server copy.py  server.py  test_config_loading.py  test_initialization.py  test_refactored_architecture.py  verify_fintech_agent.py  verify_memory_integration.py
adk-agent/agents/: chairman.py  macro.py  market.py  news.py  report.py  sentiment.py
adk-agent/api/: receptionist.py
adk-agent/core/: agent_factory.py  llm.py  memory_agent.py  memory_callback.py  memory_client.py  memory_tools.py  tools.py
adk-agent/fintech_agent/: .env  agent.py  tools.py
adk-agent/google_agent/: .env  agent.py
agent/: .gitignore  AGENTS.md  README.md  config.yaml copy.example  config.yaml.example  find_task.py  main.py  pyproject.toml  requirements.txt  spec.md  tasks.md  test_a2a_streaming.py  test_bus_flow.py
agent/api/: README.md  a2a.py  middleware.py  models.py  routes.py
agent/core/: README.md  a2a_client.py  agent.py  bus.py  config.py  graph.py  memory.py  nodes.py  prompts.py  schema.py  state.py
agent/core/agents/: README.md  a2a_base.py  critic.py  (+8 more)
agent/tests/: debug_agent_output.py  debug_deepseek_tools.py  debug_supervisor.py  debug_tool_choice.py  integration_test.py  test_agent.py  verify_graph.py
agent/tools/: base.py  manager.py  skill_adapter.py
agent/utils/: exceptions.py  logging.py
(+510 files in other folders)
